<resources>
    <string name="app_name">Lab 6</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>

    <string name="login">Login</string>
    <string name="loginname">loginname</string>
    <string name="pass">Password</string>
    <string name="password">password</string>

    <string name="dialog_title">Hello</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="response">Here is my Response</string>

    <string name="start_chat">Start Chat</string>
    <string name="send_text">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="newMessage">New Message</string>

</resources>