<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vijay.androidlabs.LoginActivity">

    <TextView
        android:text = "@string/login"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/tvLogin"
        android:textSize = "40dp" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginname"
        android:inputType="textEmailAddress" />

    <TextView
        android:text = "@string/pass"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/tvPass"
        android:textSize = "40dp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"/>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>